--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,7 +1,8 @@
 apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
-
 import com.android.build.OutputFile
+
+
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -111,6 +112,17 @@ android {
         }
     }
     signingConfigs {
+
+        release {
+            if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
+                storeFile file(MYAPP_RELEASE_STORE_FILE)
+                storePassword MYAPP_RELEASE_STORE_PASSWORD
+                keyAlias MYAPP_RELEASE_KEY_ALIAS
+                keyPassword MYAPP_RELEASE_KEY_PASSWORD
+            }
+        }
+
+
         debug {
             storeFile file('debug.keystore')
             storePassword 'android'
@@ -125,9 +137,9 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
-            minifyEnabled enableProguardInReleaseBuilds
-            proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
+            // minifyEnabled enableProguardInReleaseBuilds
+            // proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
     }
 
