--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -42,3 +42,8 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+MYAPP_RELEASE_STORE_FILE=derma.keystore
+MYAPP_RELEASE_KEY_ALIAS=derma
+MYAPP_RELEASE_STORE_PASSWORD=cs192045
+MYAPP_RELEASE_KEY_PASSWORD=cs192045
