--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "android": "npx react-native run-android",
+    "release:android": "npx react-native run-android --variant=release",
     "ios": "npx react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
@@ -22,6 +23,7 @@
     "react-hook-form": "^7.44.3",
     "react-native": "0.71.10",
     "react-native-animatable": "^1.3.3",
+    "react-native-image-picker": "^5.6.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "^4.5.3",
